Added SVG file and using jQuery to get it

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,11 +5,12 @@
 <style type="text/css">
   #chart{
     margin: 0 auto;
-    position: relative;
     width: 950px;
   }
-  svg{
-    width: 100%
+  path{
+    fill: #e1e1e1;
+    stroke: #fff;
+    stroke-width: .7px;
   }
 </style>
 {% endblock %}
@@ -17,9 +18,10 @@
 
 {% block js %}
 <!--JavaScript for map-->
-<script src="/static/js/libs/d3.js"></script>
-<script src="/static/js/libs/d3.geo.js"></script>
 <script src="/static/js/disastermath.js"></script>
+<script type="text/javascript">
+
+</script>
 {% endblock %}
 
 
