--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,13 +4,10 @@
 <link rel="stylesheet" href="/static/css/formalize.css">
 <style type="text/css">
   #chart{
-    margin: 0 auto;
-    width: 950px;
+    width: 60%;
   }
-  path{
-    fill: #e1e1e1;
-    stroke: #fff;
-    stroke-width: .7px;
+  iframe{
+    width: 100%;
   }
 </style>
 {% endblock %}
@@ -19,9 +16,6 @@
 {% block js %}
 <!--JavaScript for map-->
 <script src="/static/js/disastermath.js"></script>
-<script type="text/javascript">
-
-</script>
 {% endblock %}
 
 
