--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block css %}
-<link rel="stylesheet" href="/static/css/index.css">
 <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/themes/smoothness/jquery-ui.css">
+<link rel="stylesheet" href="/static/css/index.css">
 {% endblock %}
 
 
@@ -13,6 +13,7 @@
 
 
 {% block main %}
+<h1>Top 5 Natural Disasters Per Year</h1>
 <div class="controls">
   <a href="#" class="play clearfix"></a>
   <div class="timeline"></div>
@@ -20,6 +21,12 @@
 <div class="clearfix visualization">
   <div id="chart"></div>
   <ul class="countries">
+    <h2>List of Countries</h2>
+    <li class="empty odd"></li>
+    <li class="empty even"></li>
+    <li class="empty odd"></li>
+    <li class="empty even"></li>
+    <li class="empty odd"></li>
   </ul>
 </div>
 {% endblock %}
