--- a/static/css/index.less
+++ b/static/css/index.less
@@ -4,6 +4,12 @@
     margin: 0 auto;
     width: 90%;
 }
+h1{
+  font-size: 20px;
+  font-weight: normal;
+  margin: 0 0 15px 14%;
+  text-align: center;
+}
 .controls{
     height: 64px;
     margin: 0 auto 75px;
@@ -27,10 +33,22 @@
     width: 60%;
 }
 .countries{
-    background: @color;
     float: right;
     height: 300px;
     width: 30%;
+    li{
+        height: 20px;
+        padding: 5px 0;
+        width: 100%;
+    }
+    li.odd{  background: #ddd; }
+}
+h2{
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+    padding: 0 0 10px;
+    text-transform: uppercase;
 }
 iframe{
     width: 100%;
