--- a/app/templates/research.html
+++ b/app/templates/research.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="/static/css/index.css">
 {% endblock %}
 
+
 {% block main %}
-<div class="drought_bg"></div>
+<div class="cloud_bg"></div>
 {% endblock %}
