--- a/static/css/index.less
+++ b/static/css/index.less
@@ -1,55 +1,37 @@
-@color: #db7019;
-
-#main{
-    margin: 0 auto;
-    width: 90%;
+.hurricane_bg{
+  background: url('/static/img/hurricane_border.png') no-repeat center center;
+  height: 575px;
+  margin: 0 auto 80px;
+  width: 1024px;
 }
-h1{
+.large{
   font-size: 20px;
-  font-weight: normal;
-  margin: 0 0 15px 14%;
-  text-align: center;
+  line-height: 1.7;
+  margin: 40px auto;
+  text-align: justify;
+  width: 75%;
 }
-.controls{
-    height: 64px;
-    margin: 0 auto 75px;
-    width: 75%;
-    .play{
-        background: url('/static/img/play_button.png') no-repeat left center;
-        display: block;
-        float: left;
-        height: 64px;
-        width: 14%;
-    }
-    .timeline{
-        float: right;
-        margin: 24px auto 0;
-        width: 85%;
-    }
+.drought_bg{
+  background: url('/static/img/drought_red.png') no-repeat center center;
+  height: 575px;
+  margin: 0 auto;
+  width: 1024px;
 }
-
-#chart{
-    float: left;
-    width: 60%;
+.lightning_bg{
+  background: url('/static/img/lightning_red.png') no-repeat center center;
+  height: 575px;
+  margin: 0 auto;
+  width: 1024px;
 }
-.countries{
-    float: right;
-    height: 300px;
-    width: 30%;
-    li{
-        height: 20px;
-        padding: 5px 0;
-        width: 100%;
-    }
-    li.odd{  background: #ddd; }
+.bridge_bg{
+  background: url('/static/img/bridge_red.png') no-repeat center center;
+  height: 575px;
+  margin: 0 auto;
+  width: 1024px;
 }
-h2{
-    font-size: 16px;
-    font-weight: normal;
-    text-align: center;
-    padding: 0 0 10px;
-    text-transform: uppercase;
-}
-iframe{
-    width: 100%;
+.cloud_bg{
+  background: url('/static/img/cloud_bg.png') no-repeat center center;
+  height: 575px;
+  margin: 0 auto;
+  width: 1024px;
 }
