--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,20 +1,20 @@
-a,a:active,a:visited{color:#db7019;}
+a,a:active,a:visited{color:#5b282a;}
 a:hover{text-decoration:underline;}
-::-moz-selection{background:#db7019;color:#fff;text-shadow:none;}
-::selection{background:#db7019;color:#fff;text-shadow:none;}
+::-moz-selection{background:#5b282a;color:#fff;text-shadow:none;}
+::selection{background:#5b282a;color:#fff;text-shadow:none;}
 ul{list-style:none;}
-body{color:#444;}
-header{display:block;margin-bottom:75px;}header ul{border-bottom:1px solid #eee;margin:0 auto;padding:10px 0;width:90%;}
-header li{float:right;padding-top:24px;}
-header li.float_left{float:left;padding-top:10px;}header li.float_left a{background:url('/static/img/disastermath.png') no-repeat center center;height:33px;width:235px;}
-header a{display:block;font-size:16px;padding:10px 12px;width:75px;text-align:center;text-decoration:none;}
-header a,header a:visited{color:#444;}
-header a:hover{background:#db7019;color:white;text-decoration:none;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;}
-.left h2,.right form{margin-top:20px;}
-.left{background:url('/static/img/bracket.png') right top no-repeat;float:left;min-height:300px;padding:0 5%;width:50%;}.left h2{font-size:50px;margin-bottom:40px;text-align:center;text-transform:uppercase;}
-.left p{font-size:18px;line-height:1.5;padding:0 10%;}
-.right{background:url('/static/img/company.png') no-repeat center center;min-height:300px;float:right;width:40%;}
+body{color:#0c0505;}
+header{display:block;margin-bottom:35px;}header ul{margin:0 auto;padding:10px 0;width:90%;}
+header li{float:right;padding-top:38px;}
+header li.float_left{float:left;padding-top:10px;}header li.float_left a{background:url('/static/img/disastermath_small_red.png') no-repeat center center;height:80px;width:200px;}
+header a{display:block;font-size:16px;padding:10px 12px;width:100px;text-align:center;text-decoration:none;}
+header a,header a:visited{color:#0c0505;}
+header a:hover{background:#5b282a;color:white;text-decoration:none;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;}
+#main{margin:0 auto;width:90%;}
+footer{margin:125px 0 0;}footer .cfa{background:url('/static/img/cfa_dark.png') no-repeat center center;height:34px;margin:0 auto;padding:20px;width:90px;}
+footer .cfa:hover{background-image:url('/static/img/cfa_light.png');}
 .flask_cloud{background:url('/static/img/flaskcloud.png') no-repeat center center;display:block;height:300px;margin:0 auto;width:460px;}
 .flask_cloud:hover{background:url('/static/img/flaskcloud_hover.png') no-repeat center center;}
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px){}@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait){}@media only screen and (min-device-width: 768px) and (max-device-width: 1024px)
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px){}@media only screen and (min-device-width: 768px) and (max-device-width: 1024px)
+and (orientation: portrait){}@media only screen and (min-device-width: 768px) and (max-device-width: 1024px)
 and (orientation: landscape){}@media only screen and (max-device-width: 480px){}
