--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>{% block title %}disastermath.com{% endblock %}</title>
+  <title>{% block title %}disastermath.org{% endblock %}</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
